[package]
name = "neruyomi"
version = "0.48.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
# reqwest handles the MU API calls. "json" feature deserialises directly to Value.
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# base64 for read_file_as_data_url
base64             = "0.22"
tokio              = { version = "1", features = ["full"] }

[package.metadata.tauri]
